<resources>
    <!-- TODO: APP -->
    <string name="str_app_admob_id">ca-app-pub-7022724497408656~5963597068</string>
    <string name="str_app_admob_banner_id">ca-app-pub-7022724497408656/8505999922</string>
    <string name="str_app_admob_banner_test_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="str_app_name">Meu CRM</string>
    <string name="str_search_hint">Digite sua pesquisa</string>
    <string name="str_client_selected">Clientes encontrados</string>
    <string name="str_app_name_en">Meu CRM</string>
    <string name="str_client_title">Cadastro de cliente</string>
    <string name="str_save">Salvar</string>
    <string name="str_back">Anterior</string>
    <string name="str_close">Fechar</string>
    <string name="str_app_version">Versão 11.0</string>
    <string name="str_dev_name">New Outsourcing</string>
    <string name="str_copyright">Copyright 2019 ©</string>
    <string name="str_take_photo">Tirar foto</string>
    <string name="str_contact">Contato, suporte e informações</string>
    <string name="str_delete">Apagar</string>
    <string name="str_share">Compartilhar</string>
    <string name="str_new_task">Nova tarefa</string>
    <string name="str_new_check">Concluir</string>
    <string name="str_attetion">Atenção</string>
    <string name="str_channel_id">new.walletofclients</string>
    <string name="str_channel_description">walletofclients</string>

    <!-- TODO: Erro -->
    <string name="str_error_message_caption">Ocorreu um erro!</string>
    <string name="str_error_message">Tente novamente.</string>

    <!-- TODO: Lista de clientes-->
    <string name="str_list_client_list">Lista de clientes</string>
    <string name="str_list_client_pf">Pessoa física</string>
    <string name="str_list_client_pj">Pessoa juridica</string>
    <string name="str_list_client_contact">Ajuda</string>
    <string name="str_list_client_import_export">Manutenção</string>
    <string name="str_list_client_no_clients_message_0">Nenhum resultado encontrado.</string>
    <string name="str_list_client_no_clients_message_1">Você ainda não tem clientes cadastrados.</string>
    <string name="str_list_client_no_clients_message_2">Comece agora clicando no botão + abaixo.</string>

    <!-- TODO: Card de clientes-->
    <string name="str_card_client_name">Cliente:</string>
    <string name="str_card_client_type">Tipo:</string>
    <string name="str_card_client_CPF_CNPJ">CPF/CNPJ:</string>

    <!-- TODO: Cadastro de pessoa fisica -->

    <string name="str_client_pf_name">Nome</string>
    <string name="str_client_pf_nick_name">Apelido</string>
    <string name="str_client_pf_CPF">CPF</string>
    <string name="str_client_pf_RG">RG</string>
    <string name="str_client_pf_date">Data de nascimento</string>
    <string name="str_client_pf_site">Site</string>
    <string name="str_client_pf_cellphone">Celular</string>
    <string name="str_client_pf_telephone">Telefone</string>
    <string name="str_client_pf_email">Email</string>
    <string name="str_client_pf_observation">Observação</string>
    <string name="str_client_pf_sex">Sexo</string>

    <!-- TODO: Cadastro de pessoa juridica -->
    <string name="str_client_pj_description_data">Dados do cliente</string>
    <string name="str_client_pj_social_name">Razão social</string>
    <string name="str_client_pj_fantasy_name">Nome fantasia</string>
    <string name="str_client_pj_CNPJ">CNPJ</string>
    <string name="str_client_pj_IE">Insc. estadual</string>
    <string name="str_client_pj_IM">Insc. municipal</string>
    <string name="str_client_pj_description_additional_data">Dados adicionais</string>
    <string name="str_client_pj_site">Site</string>
    <string name="str_client_pj_observation">Observação</string>

    <!-- TODO: Cadastro de endereço -->
    <string name="str_client_address_description_data">Dados do endereço</string>
    <string name="str_client_address_CEP">CEP</string>
    <string name="str_client_address_street">Rua</string>
    <string name="str_client_address_number">Número</string>
    <string name="str_client_address_neighborhood">Bairro</string>
    <string name="str_client_address_city">Cidade</string>
    <string name="str_client_address_state">Estado</string>
    <string name="str_client_address_country">Pais</string>
    <string name="str_client_address_country_fixed">Brasil</string>

    <!-- TODO: Nova tarefa -->
    <string name="str_tasks_new_task">Cadastro de tarefa</string>
    <string name="str_tasks_client">Cliente</string>
    <string name="str_tasks_date">Data</string>
    <string name="str_tasks_hour">Horário</string>
    <string name="str_tasks_title">Título</string>
    <string name="str_tasks_title_hint">Insira o título</string>
    <string name="str_tasks_client_all_day">Dia inteiro</string>

    <!-- TODO: Consulta de tarefas -->
    <string name="str_list_tasks">Tarefas</string>
    <string name="str_list_tasks_no_clients_message_1">Você ainda não tem tarefas cadastrados.</string>
    <string name="str_list_tasks_no_clients_message_2">Comece agora clicando no botão + abaixo.</string>
</resources>
