<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Activitys.ErrorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageView
            android:id="@+id/idImgAlert"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_error"/>

        <TextView
            android:id="@+id/idTxwErrorMessageCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_error_message_caption"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:gravity="center"/>

        <TextView
            android:id="@+id/idTxwErrorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_error_message"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:gravity="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/idBtnErrorClose"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_rounded_red"
            android:elevation="@dimen/fab_margin"
            android:textAlignment="center"
            android:text="@string/str_close"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="19dp" />
    </LinearLayout>
</LinearLayout>